# events-exercise

./: .pre-commit-config.yaml  Dockerfile  README.md  _Backend Exercise.docx  docker-compose.yml  pyproject.toml
evidence_handler/: app.py  database.py
evidence_handler/core/: consts.py  fields.py  serializer.py  utils.py
evidence_handler/core/abstract/: abstract_field.py  serializable_class.py
evidence_handler/dao/: evidence.py
evidence_handler/models/: evidence.py
evidence_handler/routes/: evidence.py  utils.py
evidence_handler/scripts/: prepare_config.py  utils.py
evidence_handler/settings/: __init__.py  config.py  configurations.json
